--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /Sources/menus.json
 /DerivedData/formAttributes.json
 /DerivedData/CompiledCode
+/DerivedData/webservices.json
+/Sources/catalog.4DCatalog
