--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@
 /DerivedData/CompiledCode
 /DerivedData/webservices.json
 /Sources/catalog.4DCatalog
+/Project/DerivedData/CompiledCode
+/Project/DerivedData/formAttributes.json
+/Project/Sources/Methods/test__gzip.4dm
+/Project/Sources/Methods/test.4dm
+/Project/Sources/Methods/XDOC_run.4dm
+/Project/Sources/Methods/ZIP__errHdlrToDevNull.4dm
+/Project/Sources/styleSheets_mac.css
+/Project/Sources/styleSheets_windows.css
+/Project/Trash
+/userPreferences.Bruno LEGAY
